--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ a {
     color: #fff;
 }
 header {
+    position: fixed;
+    width: 95%;
+    z-index: 10;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -37,4 +40,28 @@ header ul li a {
 header ul li a:hover, .active {
     background: #fff;
     color: #200016;
+}
+.main {
+    position: relative;
+    height: 100vh;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.main img {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
+#moon {
+    mix-blend-mode: screen;
+    transform: translateY(80px);
+}
+.nouvil {
+    color: #ffffff;
+    font-size: 25px;
+    text-transform: uppercase;
+    transform: translateY(-140px);
 }
