--- a/style.css
+++ b/style.css
@@ -48,6 +48,15 @@ header ul li a:hover, .active {
     display: flex;
     justify-content: center;
     align-items: center;
+    overflow: hidden;
+}
+.main::after {
+    position: absolute;
+    bottom: 0;
+    content: '';
+    height: 100px;
+    width: 100%;
+    background: linear-gradient(to top, #200016, transparent);
 }
 .main img {
     position: absolute;
